[workspace]
members = [
   "lib/main",       # Main modding library crate
   "lib/macros",     # Macros incorporated publically into nusion
   "lib/sys",        # System abstractions used by nusion
   "lib/sys-macros", # System macros incorporated publically into nusion-sys

   "games/*"         # Game-specific framework implementations
]

