[package]
name        = "nusion-game-drg"
description = "Nusion modding API for Deep Rock Galactic."
authors     = ["Sinisig"]
version     = "0.0.1+alpha"
edition     = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
nusion-lib  = { path = "../../lib/main" }
inputbot    = "0.5.1"

