[package]
name        = "nusion"
description = "General game modding framework and utilites crate."
authors     = ["Sinisig"]
version     = "0.3.0+alpha"
edition     = "2021"

[dependencies]
nusion-proc-macros   = { path = "../proc" }
nusion-sys           = { path = "../sys"  }
lazy_static          = "1.4.0"
crc                  = "3.0.1"

