[package]
name        = "nusion-lib"
description = "General game modding framework and utilites crate."
authors     = ["Sinisig"]
version     = "0.4.0+alpha"
edition     = "2021"

[dependencies]
nusion-lib-proc   = { path = "../proc" }
nusion-lib-sys    = { path = "../sys"  }
lazy_static       = "1.4.0"
backtrace         = "0.3.67"
crc               = "3.0.1"

