[package]
name        = "nusion-core-sys"
description = "System abstractions used by nusion-core."
authors     = ["Sinisig"]
version     = "0.4.1+alpha"
edition     = "2021"

[target.'cfg(windows)'.dependencies.winapi]
version  = "0.3.9"
features = [
   "consoleapi",
   "errhandlingapi",
   "handleapi",
   "libloaderapi",
   "memoryapi",
   "minwindef",
   "processthreadsapi",
   "tlhelp32",
   "winerror",
]

