[package]
name        = "nusion-core"
description = "General game modding framework and utilites crate."
authors     = ["Sinisig"]
version     = "0.4.1+alpha"
edition     = "2021"

[dependencies]
nusion-core-proc  = { path = "../nusion-core-proc" }
nusion-core-sys   = { path = "../nusion-core-sys"  }
lazy_static       = "1.4.0"
backtrace         = "0.3.67"
crc               = "3.0.1"

