[package]
name        = "nusion-proc-macros"
description = "Procedural macros to be included with nusion"
authors     = ["Sinisig"]
version     = "0.2.0+alpha"
edition     = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate  = "1.3.0"
proc-macro-error  = "1.0.4"
proc-macro2       = "1.0.51"
lazy_static       = "1.4.0"
regex             = "1.7.1"
quote             = "1.0.23"
crc               = "3.0.1"
syn               = { version = "1.0.107", features = ["full", "extra-traits"]}

