[package]
name        = "nusion-sys"
description = "System abstractions used by nusion."
authors     = ["Sinisig"]
version     = "0.3.2+alpha"
edition     = "2021"

[target.'cfg(windows)'.dependencies.winapi]
version  = "0.3.9"
features = [
   "consoleapi",
   "errhandlingapi",
   "handleapi",
   "libloaderapi",
   "memoryapi",
   "minwindef",
   "processthreadsapi",
   "tlhelp32",
   "winerror",
]

